<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Experimental</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Experimental</string>
    <string name="nav_header_subtitle">testing some features…</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_api">API</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_gps">GPS</string>
    <string name="menu_json">JSON</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_qr">QR</string>
    <string name="menu_swipe">Swipe</string>
    <string name="menu_text_recognition">Text Recognition</string>
    <string name="menu_wifi_direct">Wifi Direct</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="details">Details</string>

    <!-- Preference Titles -->
    <string name="customization_header">Customization</string>

    <!-- Customization Preferences -->
    <string name="theme_key" translatable="false">theme</string>
    <string name="theme_title">Theme</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="dark_theme_value" translatable="false">dark</string>
    <string name="light_theme_value" translatable="false">light</string>
    <string name="system_theme_value" translatable="false">system</string>
    <string name="dark_theme_entry">Dark</string>
    <string name="light_theme_entry">Light</string>
    <string name="system_theme_entry">System default</string>

    <!-- API -->
    <string name="fetch_joke">Fetch Joke</string>

    <!-- Camera -->
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="crop_image">Crop Image</string>

    <!-- GPS -->
    <string name="location_name">no location retrieved yet</string>

    <!-- Wifi Direct -->
    <string name="placeholder_device">Device</string>

    <!-- Json -->
    <string name="content_placeholder">no content yet</string>
    <string name="import_data">Import Data</string>
    <string name="export_data">Export Data</string>
    <string name="generate">Generate</string>

    <!-- Notification -->
    <string name="send_notification_5s">Notification in 5s</string>

    <!-- QR -->
    <string name="hint_qr">Content of QR Code</string>
    <string name="generate_qr">Generate QR Code</string>
    <string name="qr_code">QR Code</string>
    <string name="label_error_correction">Error Correction Level:</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="quartile">Quartile</string>
    <string name="high">High</string>
</resources>