<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_api"
            android:icon="@drawable/ic_menu_api"
            android:title="@string/menu_api" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_gps"
            android:icon="@drawable/ic_menu_gps"
            android:title="@string/menu_gps" />
        <item
            android:id="@+id/nav_json"
            android:icon="@drawable/ic_save"
            android:title="@string/menu_json" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_save"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_save"
            android:title="@string/menu_qr" />
        <item
            android:id="@+id/nav_spotify"
            android:icon="@drawable/ic_menu_spotify"
            android:title="@string/menu_spotify" />
        <item
            android:id="@+id/nav_swipe"
            android:icon="@drawable/ic_menu_swipe"
            android:title="@string/menu_swipe" />
        <item
            android:id="@+id/nav_wifi_direct"
            android:icon="@drawable/ic_menu_wifi_direct"
            android:title="@string/menu_wifi_direct" />
    </group>
</menu>