<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_api">
    <fragment
        android:id="@+id/nav_api"
        android:name="cloud.englert.experimental.ui.api.ApiFragment"
        android:label="@string/menu_api"
        tools:layout="@layout/fragment_api" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="cloud.englert.experimental.ui.camera.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_swipe"
        android:name="cloud.englert.experimental.ui.swipe.SwipeFragment"
        android:label="@string/menu_swipe"
        tools:layout="@layout/fragment_swipe" />
</navigation>